@@ -46,13 +46,21 @@ getId <- function() {
 #' @param rd A Date object describing the date to be advanced to the
 #' next business day.
 #' @param days An optional integer offset applied to the date
-#' @param unit An optional time unit value applied to the date (default is day)
-#' @param bdc An optional integer defining a business day convention
+#' @param unit An optional character value denoting a time unit, default value
+#' is \dQuote{Day}, and supported values are \dQuote{Days}, \dQuote{Weeks},
+#' \dQuote{Months}, \dQuote{Years}, \dQuote{Hours}, \dQuote{Seconds},
+#' \dQuote{Minutes}, \dQuote{Milliseconds}, \dQuote{Microseconds}.
+#' @param bdc An optional integer defining a business day convention, default
+#' is \dQuote{Following}, and supported values are
+#' \dQuote{Following}, \dQuote{ModifiedFollowing}, \dQuote{Preceding},
+#' \dQuote{ModifiedPreceding}, \dQuote{Unadjusted},
+#' \dQuote{HalfMonthModifiedFollowing} and \dQuote{Nearest}.
 #' @param eom An optional boolean toggle whether end-of-month is to be respected
 #' @return The advanced date is returned
 #' @examples
 #' advanceDate(Sys.Date(), 2)  # today to the next biz day, plus 2 days
-advanceDate <- function(rd, days = 0L, unit = 0L, bdc = 0L, eom = FALSE) {
+#' @seealso The \code{advanceUnits} functions offers the same functionality from R.
+advanceDate <- function(rd, days = 0L, unit = "Days", bdc = "Following", eom = FALSE) {
     .Call(`_qlcal_advanceDate`, rd, days, unit, bdc, eom)
 }
 
